# production-rag-system

./: .gitignore
client/: package-lock.json  package.json
client/src/app/: layout.tsx
client/src/app/(auth)/[[...sign-up]]/: page.tsx
client/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
client/src/app/(dashboard)/projects/: layout.tsx  page.tsx
client/src/app/(dashboard)/projects/[projectId]/: page.tsx
client/src/app/(dashboard)/projects/[projectId]/chats/[chatId]/: page.tsx
client/src/app/projects/: page.tsx
client/src/components/layout/: Sidebar.tsx
client/src/components/projects/: FileDetailsModal.tsx
server/: database.py  main.py  pyproject.toml  tasks.py
server/routers/: files.py
server/supabase/migrations/: 20260624223530_grant_service_role_privileges.sql
server/supabase/snippets/: Untitled query 513.sql  Untitled query 805.sql
