[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "clerk-backend-api (>=6.0.1,<7.0.0)",
    "boto3 (>=1.43.36,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "scrapingbee (>=2.0.2,<3.0.0)",
    "unstructured[all-docs] (>=0.23.1,<0.24.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-core (>=1.4.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
